{
    "name": "InputMaps",
    "maps": [
        {
            "name": "FreeMove",
            "id": "94d4a876-b0ad-455b-8ba7-e15a2eeca000",
            "actions": [
                {
                    "name": "FreeMove_Move",
                    "type": "Value",
                    "id": "72bd034d-2295-479d-bc98-084f62366db7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FreeMove_Sprint",
                    "type": "Button",
                    "id": "ff2ca3f8-e6b8-4a05-bc33-fddde51ce337",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FreeMove_Inventory",
                    "type": "Button",
                    "id": "c7c40525-2858-46ff-9941-1792bb8ed7a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FreeMove_Interact",
                    "type": "Button",
                    "id": "a277810b-80f7-46cb-a8db-5e18ab09354c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold,Press",
                    "initialStateCheck": false
                },
                {
                    "name": "FreeMove_UnequipItem",
                    "type": "Button",
                    "id": "b67fb77d-5e78-4f6f-81cf-d9186099ced9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Arrows",
                    "id": "50ca3acf-2b21-4662-8412-74560bed13b9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FreeMove_Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8ae02e1f-1a0e-4017-8d7b-ab32309f2a1d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FreeMove_Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f3359ced-2f1e-4b57-bb1f-d56eb519267e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FreeMove_Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "433805f8-ffe4-4b69-8044-faee30381d45",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FreeMove_Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6463db2a-e5d2-4db2-9d29-e583dbbf3b6f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FreeMove_Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "33431d46-1525-481c-9475-6092ccfa50de",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FreeMove_Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "699d1ff7-44dd-4c3e-a55c-12ffc07e09ff",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FreeMove_Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd4424ef-ef0b-4750-8cc2-1c3e2eadc790",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FreeMove_Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c03629e-9063-4c38-8089-fb0dc7d7bffb",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FreeMove_Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6588313f-f420-4823-8b34-670228f2e823",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FreeMove_Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c30f84e-b0a5-47ef-ae1d-2f5f0e6cb680",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FreeMove_Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6033cc7-40f7-4448-bf3a-9a7fa8cdb83a",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FreeMove_Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bb96ee2-81d2-4437-98b2-eade1f6119dc",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FreeMove_UnequipItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "644b6ead-2f43-4b9c-8bbb-92b46e4eaea1",
            "actions": [
                {
                    "name": "UI_Navigate",
                    "type": "PassThrough",
                    "id": "8b7c8a6a-214c-4640-96dc-61c6346fa4b0",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone(min=0.5)",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UI_Confirm",
                    "type": "Button",
                    "id": "d1a8e578-e516-4ac4-a02c-b7e0adc366d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UI_CloseMenu",
                    "type": "Button",
                    "id": "4402d1dd-9759-4426-ace0-2aa103c5e197",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UI_AlternativeConfirm",
                    "type": "Button",
                    "id": "2e8b3120-cd91-40e9-b4ad-039054a39d3e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "de53a26f-5c65-40ba-b1ca-72ec71515507",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "UI_Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0c4e309-3140-4867-b81f-af7c453063ef",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "UI_Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "3bb88b18-84a1-4f1f-96af-d7694f0db8d8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UI_Navigate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b127fd15-f4e6-4d2f-a9c7-38f354608b02",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "UI_Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "61a90679-dbb3-48fe-8fd1-b700172df035",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "UI_Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "40d0eb2d-5048-4e7b-b484-cb092446ae8c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "UI_Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2b4e2a99-b9bb-499b-8716-843123f48c7a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "UI_Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "44ab831d-a91a-4c29-a5d2-a639fc922937",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "UI_Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2fc31627-5f55-48f9-903e-2aba704daf5c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "UI_Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79123b2c-e468-4aad-8ab5-f8878a78c1e9",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "UI_CloseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32f75eb4-46cc-49a5-a22e-174758748157",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "UI_CloseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b31e0e1c-1d63-406d-9201-eb5f3d428f63",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "UI_CloseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce5de0e3-2e89-485e-a774-dfe10f82ebc1",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "UI_AlternativeConfirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "338c374b-543d-4323-b95b-28f442d6b024",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "UI_AlternativeConfirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MovingObjects",
            "id": "a74c967f-f8df-4ee5-b20e-76a1619a2131",
            "actions": [
                {
                    "name": "MovingObjects_ObjectDirection",
                    "type": "Value",
                    "id": "39ddb234-b7cf-408a-964d-c2e812315e50",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovingObjects_Exit",
                    "type": "Button",
                    "id": "e2f9329a-f888-4ad9-afc6-406dad1b4c07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4c6c1d9c-b079-44ed-8079-949da7cafdf6",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MovingObjects_Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8abe2a8-1145-466a-b4fd-b16cff2dca45",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MovingObjects_Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f749ab62-e0ae-4631-964c-ace53daf5b06",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MovingObjects_ObjectDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "13c44d19-1da6-4be1-a19b-a8acddd05332",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovingObjects_ObjectDirection",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bb4081cf-24a6-4cda-96f4-bdd0e3b724b7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovingObjects_ObjectDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "477bdc2d-e612-46f9-bc34-06611144eb47",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovingObjects_ObjectDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0ea4146b-35d5-48c2-b86e-2bf77e704733",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovingObjects_ObjectDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1a17e4d4-718d-4bfc-a02a-b961f889482b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovingObjects_ObjectDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "FishingUI",
            "id": "af7e0ff0-1ba3-4a6a-9da8-7d9ad6cedf81",
            "actions": [
                {
                    "name": "FishingUI_Quit",
                    "type": "Button",
                    "id": "4d600c3c-9d4e-411b-ad38-fb389b1580ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FishingUI_Action",
                    "type": "Button",
                    "id": "850cd76e-32b2-432b-a3d4-3e9b5080049e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2cd8fbba-3609-4c24-a22f-2e4b7be86551",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FishingUI_Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fad141d-28c1-42e6-872b-73fd824ea925",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FishingUI_Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "NPC_TALK",
            "id": "e84eb8f8-5d0b-4d88-8020-936a015a94ca",
            "actions": [
                {
                    "name": "NPC_TALK_Quit",
                    "type": "Button",
                    "id": "be0c374a-cd41-4e8c-b27f-ffa6971130fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a6cb1dc0-3dba-479d-a096-a0f0ffb328bb",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "NPC_TALK_Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}